<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_add_entry"
        android:padding="8dp"
        android:text="@string/txt_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_18" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/txt_new" />

        <EditText
            android:id="@+id/edt_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_add_entry"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_shade"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/txt_delete" />

        <EditText
            android:id="@+id/edt_delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_delete_entry"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_shade"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="1" >

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.87"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_advance"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:onClick="onClick"
            android:text="@string/txt_advance_mode" />
    </LinearLayout>

</LinearLayout>